@@ -1,3 +1,4 @@
+1/18/12 replace duplicate Teacher menu with MoleculeShapesTeacherMenu, a specialization of the phetcommon menu (so we don't have to address sim-sharing twice)
 Real/Model radio buttons horizontal on the dropdown tab
 Removed BeCl2
 Changed the ordering of molecules in the dropdown tab
